--- a/style-light-theme.css
+++ b/style-light-theme.css
@@ -180,7 +180,8 @@ subtitle-1 {
     margin-top: 4px;
     margin-bottom: 4px; }
   #msPanel MsDateMenuBox StIcon {
-    padding: 14px;
+    padding-top: 14px;
+    padding-bottom: 14px;
     height: 20px;
     width: 20px; }
     #msPanel MsDateMenuBox StIcon .primary {
